--- a/block-BJaail/code/stylesheet/style.css
+++ b/block-BJaail/code/stylesheet/style.css
@@ -135,7 +135,7 @@ table {
 }
 
 body {
-  background-color: black;
+  background-color: #2f2850;
 }
 
 .container {
@@ -147,15 +147,24 @@ body {
 
 .container h1 {
   text-align: center;
+  font-size: 3rem;
+  color: #3a3a68;
+}
+
+.container label {
+  color: #41416e;
+  text-transform: capitalize;
+  font-weight: 700;
 }
 
 .container input {
   width: 100%;
   margin-bottom: 2rem;
+  padding: 0.5rem;
 }
 
 input:last-child {
-  background-color: #0099ff;
+  background-color: #40306b;
   color: white;
 }
 
@@ -164,6 +173,12 @@ input:last-child {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  padding: 1rem;
+}
+
+.container .data h2 {
+  text-transform: capitalize;
+  font-weight: 700;
 }
 
 .books li {
@@ -174,6 +189,6 @@ input:last-child {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: antiquewhite;
-  padding: 1rem 0;
+  padding: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
