--- a/block-BJaaim/code/stylesheet/_home.scss
+++ b/block-BJaaim/code/stylesheet/_home.scss
@@ -2,42 +2,55 @@
   box-sizing: border-box;
 }
 
-.main-div {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-  .inner-div {
-    width: 50vw;
-    background-color: rgb(160, 160, 224);
-    padding: 1rem 1rem;
-    box-shadow: 0rem 1rem 0.5rem gray;
-    border-radius: 1rem;
-    ul {
-      li {
-        margin-top: 0.5rem;
-        
-      }
+.container {
+  max-width: 70%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: tomato;
+  .heading-div {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 0rem;
+    color: wheat;
+    align-items: center;
+    h1 {
+      border: 1px solid wheat;
+      border-radius: 0.2rem;
+      padding: 0.3rem;
     }
   }
-  .btn {
-    display: block;
-    margin: auto;
-    margin-top: 0.1rem;
-    padding: 0.3rem 1rem;
-    background-color: rgb(139, 201, 226);
-    outline: none;
-    border: none;
+}
+fieldset {
+  border: 1px solid;
+  padding: 1rem;
+  margin-top: 2rem;
+
+  legend {
+    background-color: black;
     color: white;
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+  }
+  .options {
+    margin: 1rem 0;
+    div {
+      margin: 0.5rem;
+    }
+  }
+}
+footer {
+  display: flex;
+  justify-items: flex-start;
+  padding-top: 0.5rem;
+  button {
+    background-color: tomato;
+    border: none;
+    outline: none;
+    padding: 0.5rem 1rem;
+    color: wheat;
     font-weight: 600;
-  }
-  .submit {
-    margin-top: 1rem;
-  }
-  .scoreArea {
-    background-color: rgb(138, 226, 206);
-    margin-top: 1rem;
-    padding: 0.5rem;
-    border-radius: 1rem;
-    // display: none;
+    margin-right: 1rem;
   }
 }
